--- a/Develop/style.css
+++ b/Develop/style.css
@@ -13,6 +13,23 @@ textarea {
   padding: 10px;
 }
 
+button {
+  border: none;
+  outline: none;
+}
+
+button:focus {
+  outline: none;
+}
+
+i {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -26,25 +43,31 @@ textarea {
 }
 
 .time-block {
-  text-align: center;
-  border-radius: 15px;
+  grid-column: 2/3;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+
 }
 
 .row {
+  display: grid;
+  grid-template-columns: 1fr 10fr 1fr;
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
 }
 
 .hour {
+  grid-column: 1/2;
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  text-align: right;
+  padding: 10px;
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
 }
 
 .present {
@@ -54,10 +77,13 @@ textarea {
 
 .future {
   background-color: #77dd77;
-  color: white;
 }
 
 .saveBtn {
+  grid-column: 3/4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -65,7 +91,6 @@ textarea {
   color: white;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all 0.3s ease-in-out;
+.saveBtn:hover {
+  cursor: pointer;
 }
